@@ -1,11 +1,17 @@
-2008-09-08  Thomas Vander Stichele  <thomas at apestaart dot org>
+2008-09-09  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* common/validate-registry.py:
+	* flumotion/common/registry.py:
+	* flumotion/launch/inspect.py:
+	* flumotion/test/test_registry.py:
 	* flumotion/component/bouncers/bouncer.xml:
 	* flumotion/component/bouncers/tokentest.xml:
 	* flumotion/component/misc/httpserver/httpserver.xml:
 	* flumotion/component/plugs/cortado/cortado.xml:
 	* flumotion/component/plugs/plugs.xml:
 	  Add descriptions for plugs and their properties.
+	  Add code to load and save them to the registry.
+	  Validate that these are added to plugs and properties.
 	  Closes #1139.
 
 2008-09-05  Arek Korbik  <arkadini@gmail.com>
